--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -3190,10 +3190,10 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9RK-dD-eAQ">
-                                <rect key="frame" x="24" y="276" width="32" height="32"/>
+                                <rect key="frame" x="24" y="276" width="34" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="92g-8u-0JX"/>
-                                    <constraint firstAttribute="height" constant="32" id="KUx-Cv-8dR"/>
+                                    <constraint firstAttribute="width" constant="34" id="92g-8u-0JX"/>
+                                    <constraint firstAttribute="height" constant="30" id="KUx-Cv-8dR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -3237,14 +3237,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummy2" translatesAutoresizingMaskIntoConstraints="NO" id="YWB-Tc-scS">
-                                <rect key="frame" x="20" y="44" width="374" height="589"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dnf-bm-BHt">
+                                <rect key="frame" x="20" y="49" width="34" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="589" id="biQ-CW-Xm5"/>
+                                    <constraint firstAttribute="height" constant="34" id="PGM-w0-lj8"/>
+                                    <constraint firstAttribute="width" constant="34" id="tzu-0R-pZQ"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="icClose32Px"/>
+                                <connections>
+                                    <action selector="clickedClose:" destination="OMf-Fe-WXr" eventType="touchUpInside" id="Yuj-4B-rhf"/>
+                                    <action selector="clickedClose:" destination="ERw-hQ-WIC" eventType="touchUpInside" id="w0p-rv-Vcv"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummy2" translatesAutoresizingMaskIntoConstraints="NO" id="YWB-Tc-scS">
+                                <rect key="frame" x="20" y="211" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="YWB-Tc-scS" secondAttribute="height" multiplier="1:1" id="Iwd-mx-Kjy"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="F5f-ih-bGu">
-                                <rect key="frame" x="20" y="657" width="374" height="120"/>
+                                <rect key="frame" x="20" y="635" width="374" height="120"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="P22-Dq-egc">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="55.5"/>
@@ -3252,9 +3265,13 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oz3-h5-Aib">
                                                 <rect key="frame" x="0.0" y="0.0" width="182.5" height="55.5"/>
                                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="카메라"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="카메라"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="카메라">
+                                                    <fontDescription key="titleFontDescription" name="NanumSquareR" family="NanumSquare" pointSize="17"/>
+                                                </buttonConfiguration>
                                                 <connections>
                                                     <action selector="clickedCameraButton:" destination="ERw-hQ-WIC" eventType="touchUpInside" id="xeJ-QN-23c"/>
                                                 </connections>
@@ -3262,9 +3279,13 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2FQ-M0-83X">
                                                 <rect key="frame" x="191.5" y="0.0" width="182.5" height="55.5"/>
                                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="앨범"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="앨범"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="앨범">
+                                                    <fontDescription key="titleFontDescription" name="NanumSquareR" family="NanumSquare" pointSize="17"/>
+                                                </buttonConfiguration>
                                                 <connections>
                                                     <action selector="clickedAlbumButton:" destination="ERw-hQ-WIC" eventType="touchUpInside" id="qpL-JO-QSS"/>
                                                 </connections>
@@ -3274,14 +3295,10 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSE-Kf-Bbf">
                                         <rect key="frame" x="0.0" y="64.5" width="374" height="55.5"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="18"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="확인"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <integer key="value" value="8"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="이미지에서 문자 추출하기"/>
                                         <connections>
                                             <action selector="clickedConfirm:" destination="ERw-hQ-WIC" eventType="touchUpInside" id="JQh-S2-WDC"/>
                                         </connections>
@@ -3293,17 +3310,22 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XCj-zd-E5u"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="YWB-Tc-scS" firstAttribute="centerY" secondItem="osN-vf-UBb" secondAttribute="centerY" constant="-50" id="6yD-UI-ECl"/>
                             <constraint firstItem="XCj-zd-E5u" firstAttribute="trailing" secondItem="F5f-ih-bGu" secondAttribute="trailing" constant="20" id="DYF-EE-D5n"/>
-                            <constraint firstItem="F5f-ih-bGu" firstAttribute="top" secondItem="YWB-Tc-scS" secondAttribute="bottom" constant="24" id="OFi-VJ-GAB"/>
+                            <constraint firstItem="Dnf-bm-BHt" firstAttribute="top" secondItem="XCj-zd-E5u" secondAttribute="top" constant="5" id="MJi-Zj-8kd"/>
+                            <constraint firstItem="F5f-ih-bGu" firstAttribute="top" secondItem="YWB-Tc-scS" secondAttribute="bottom" constant="50" id="OFi-VJ-GAB"/>
                             <constraint firstAttribute="trailing" secondItem="YWB-Tc-scS" secondAttribute="trailing" constant="20" id="P9G-xh-QYn"/>
                             <constraint firstItem="YWB-Tc-scS" firstAttribute="leading" secondItem="XCj-zd-E5u" secondAttribute="leading" constant="20" id="hOr-jx-8zj"/>
-                            <constraint firstItem="YWB-Tc-scS" firstAttribute="top" secondItem="osN-vf-UBb" secondAttribute="topMargin" id="v4A-Jn-DuE"/>
+                            <constraint firstItem="Dnf-bm-BHt" firstAttribute="leading" secondItem="XCj-zd-E5u" secondAttribute="leading" constant="20" id="hno-KR-omD"/>
                             <constraint firstItem="F5f-ih-bGu" firstAttribute="leading" secondItem="XCj-zd-E5u" secondAttribute="leading" constant="20" id="vwi-2j-oPv"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="btnAlbumn" destination="2FQ-M0-83X" id="5wL-0m-Jfx"/>
+                        <outlet property="btnCamera" destination="Oz3-h5-Aib" id="IJh-bY-gwE"/>
+                        <outlet property="btnConfirm" destination="uSE-Kf-Bbf" id="ri5-sZ-nJE"/>
                         <outlet property="textImageView" destination="YWB-Tc-scS" id="inx-R9-b1o"/>
                     </connections>
                 </viewController>
